--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -10,7 +10,8 @@ on:
 
 jobs:
   test:
-    if: ${{ contains(github.event.*.labels.*.name, 'gpt review') }} # Optional; to run only when a label is attached
+    # Optional; to run only when a label is attached
+    # if: ${{ contains(github.event.*.labels.*.name, 'gpt review') }} 
     runs-on: ubuntu-latest
     steps:
       - uses: anc95/ChatGPT-CodeReview@main
