--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -9,9 +9,8 @@ on:
     types: [opened, reopened, synchronize]
 
 jobs:
-  test:
-    # Optional; to run only when a label is attached
-    # if: ${{ contains(github.event.*.labels.*.name, 'gpt review') }} 
+  test:    
+    if: ${{ contains(github.event.*.labels.*.name, 'gpt review') }} # Optional; to run only when a label is attached
     runs-on: ubuntu-latest
     steps:
       - uses: anc95/ChatGPT-CodeReview@main
